--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    <div id="list">
+
+    </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
